Bug #31787 slave does not batch updates
Submitted: 23 Oct 2007 14:38 Modified: 24 Oct 2007 19:00
Reporter: Tomas Ulin
Status: Closed
Category:Server: ClusterRep Severity:S3 (Non-critical)
Version:CGE-6.3 OS:Any
Assigned to: Tomas Ulin Target Version:CGE-6.3.6
Tags: cluster, replication, batching

[23 Oct 2007 14:38] Tomas Ulin
Description:
with CGE-6.3 there is the option to let updates on master also run as updates on slave,
however there is no slave batching support for update

How to repeat:
.
[23 Oct 2007 14:40] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/36134

ChangeSet@1.2666, 2007-10-23 14:42:19+02:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #31787 slave does not batch updates
  - we then also need extra no-commit for slave updates that contain conflict functions
[23 Oct 2007 15:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/36137

ChangeSet@1.2667, 2007-10-23 15:04:58+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #31787 slave does not batch updates
  - correction, pk_update never reaches this part of the code
[23 Oct 2007 15:04] Tomas Ulin
pushed to CGE 6.3.6
[24 Oct 2007 19:00] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in mysql-5.1.22-ndb-6.3.6 changelog. Closed (CGE-only issue).