Bug #31787 slave does not batch updates - we then also need extra no-commit for slave updates that contain conflict functions